# PyLEM-manuscript

./: LICENSE  README.md  environment.yml
Model/: conc_01_Rf05percent.py  conc_03_Rf05percent.py  conc_05_Rf05percent.py
Topography/: conc_01_Rf05percent_1.0_flow_direction  conc_01_Rf05percent_1.0_hillshade  conc_01_Rf05percent_1.0_length_directions  conc_03_Rf05percent_1.0_flow_direction  conc_03_Rf05percent_1.0_hillshade  conc_03_Rf05percent_1.0_length_directions  conc_05_Rf05percent_1.0_flow_direction  conc_05_Rf05percent_1.0_hillshade  conc_05_Rf05percent_1.0_length_directions  juncs_conc_01_Rf05percent_1.0_1E5.p  juncs_conc_03_Rf05percent_1.0_1E5.p  juncs_conc_05_Rf05percent_1.0_1E5.p  rush_run_flow_direction  rush_run_logarea
data/Figure_3_Hack_plots/: Figure_3.ipynb
data/Figure_5_flow_lengths/: Flow_length_plots.ipynb  (+1 more)
data/Figure_6_optimization_data/: Figure_6.ipynb
pylem_copy/: Array2D.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  __init__.py  area_slope.hpp  cmake_install.cmake  model.py  priority_flood.hpp  pyas.c  pyas.cpp  pyas.pxd  pyas.pyx  pyasc.cpp  pyasc.h  pylem.py  pypf.cxx  pypf.pxd  pypf.pyx  pypfc.cpp  pypfc.h  setup.py  utils.py
pylem_copy/.ipynb_checkpoints/: Diffusion-checkpoint.ipynb  HackScaling-checkpoint.ipynb  LowResImproperlyScaledModels-checkpoint.ipynb  ToyModel-checkpoint.ipynb
pylem_copy/models/: conc_01_Rf005percent.py  conc_01_Rf05percent.py  conc_01_Rf5percent.py  conc_03_Rf005percent.py  conc_03_Rf05percent.py  conc_03_Rf5percent.py  conc_05_Rf005percent.py  conc_05_Rf05percent.py  conc_05_Rf5percent.py
(+2972 files in other folders)
